# sys_id_class_scripts

./: CMakeLists.txt  CMakeLists.txt~  package.xml
data/project2/: baxter_fk_poses.csv  baxter_poses.csv
data/project3/: baxter_full_poses.csv  baxter_poses.csv
launch/: checkerboard.launch
scripts/: baxter.urdf  baxter.urdf.xacro  baxter_1.urdf  baxter_kinematics.py  baxter_kinematics.py~  baxter_poses.csv  calibrate_xtion.py  calibrate_xtion.py~  collect_cpa.py  cpa_pts.p  cpa_pts_50.p  fk_data_collection.py  full_fit_data_gen.py  js_data_recorder.py  kin_calib_data_collection.py  kin_calib_data_collection.py~  manipulator_model.py  poses.csv  process_cpa.py  tf_helper.py  tf_pose.npy
