<?xml version="1.0"?>
<package format="2">
  <name>sys_id</name>
  <maintainer email="bala@cs.utah.edu">bala</maintainer>

  <version>0.0.1</version>
  <description>
a
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>checkerboard_detector</depend>
</package>
